# naquid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
.circleci/: config.yml
src/: naquid.cpp  naquid.h  nq.cpp  nq.h
src/backends/chromium/base/allocator/: features.h
src/backends/chromium/base/debug/: debugging_flags.h
src/backends/chromium/base/metrics/: histogram_macros_internal.h
src/backends/chromium/base/synchronization/: lock_impl_posix.cc
src/backends/chromium/base/threading/: platform_thread_posix.cc  thread_id_name_manager.cc
src/backends/chromium/base/win/: base_features.h
src/backends/chromium/jni/: AndroidCellularSignalStrength_jni.h  AndroidCertVerifyResult_jni.h  AndroidNetworkLibrary_jni.h  ApplicationStatus_jni.h  BuildInfo_jni.h  ContentUriUtils_jni.h  HttpNegotiateAuthenticator_jni.h  JNIUtils_jni.h  ProxyChangeListener_jni.h  SystemMessageHandler_jni.h
src/backends/chromium/net/: net_features.h
src/backends/chromium/net/quic/core/: quic_buffered_packet_store.h
src/backends/chromium/net/tools/quic/: quic_dispatcher.h
src/backends/chromium/stub/: nq_quic_socket_utils.cpp
src/backends/compats/: nq_loop.cpp  nq_quic_alarm.cpp  nq_quic_alarm.h
src/backends/compats/chromium/: compiler_flags.h  nq_quic_alarm.h
src/basis/: allocator.h  assert.h  atomic.h  closure.h  convert.h  defs.cpp  defs.h  endian.cpp  endian.h  handler_map.h  header_codec.h  id_factory.h  io_processor.h  length_codec.h  logger.cpp  logger.h  loop.h  loop_impl.h  macros.h  memory.cpp  memory.h  msgid_factory.h  platform.h  syscall.h  timespec.cpp  timespec.h
src/chromium/base/: generated_build_date.h  logging.cc  os_compat_android.h
src/chromium/base/allocator/: features.h
src/chromium/base/debug/: debugging_flags.h
src/chromium/base/mac/: foundation_util.h
src/chromium/base/synchronization/: lock_impl_win.cc
src/chromium/base/win/: base_features.h
src/chromium/jni/: PathUtils_jni.h  SysUtils_jni.h  ThreadUtils_jni.h  X509Util_jni.h
src/chromium/net/: net_features.h
src/chromium/net/cert/: x509_certificate.cc
src/chromium/net/quic/core/: quic_connection.cc  quic_crypto_client_handshaker.cc  quic_session.cc  quic_session.h  quic_stream.cc  quic_stream.h  quic_stream_sequencer.cc
src/chromium/net/quic/core/congestion_control/: rtt_stats.cc
src/chromium/net/tools/quic/: quic_dispatcher.cc
src/core/: closure.h  compile_flags.h  defs.h  handler_map.h  hdmap.h  io_processor.h  length_codec.h  loop.h  loop_impl.h  msgid_factory.h  nq_alarm.cpp  nq_alarm.h  nq_async_resolver.cpp  nq_async_resolver.h  nq_at_exit.cpp  nq_at_exit.h  nq_boxer.cpp  nq_boxer.h  nq_client.cpp  nq_client.h  nq_client_base.cpp  nq_client_base.h  nq_client_loop.cpp  nq_client_loop.h  nq_client_loop_base.cpp  nq_client_loop_base.h  nq_client_session.cpp  nq_client_session.h  nq_closure.h  nq_config.cpp  nq_config.h  nq_config_base.cpp  nq_config_base.h  nq_dispatcher.cpp  nq_dispatcher.h  nq_dispatcher_base.cpp  nq_dispatcher_base.h  nq_loop.cpp  nq_loop.h  nq_loop_base.cpp  (+27 more)
src/core/compat/: nq_client_compat.cpp  nq_client_compat.h  nq_client_loop.cpp  nq_client_loop.h  nq_client_loop_compat.h  nq_config_compat.cpp  nq_config_compat.h  nq_dispatcher_compat.cpp  nq_dispatcher_compat.h  nq_file_util.cpp  nq_loop.cpp  nq_loop.h  nq_loop_compat.cpp  nq_loop_compat.h  nq_protocol_manager.h  nq_quic_alarm.cpp  nq_quic_alarm.h  nq_quic_socket_utils.cpp  nq_quic_types.cpp  nq_quic_types.h  nq_quic_version_manager.h  nq_server_session_compat.cpp  nq_server_session_compat.h  nq_session.cpp  nq_session.h  nq_stream_compat.cpp  nq_stream_compat.h  nq_url_canon_icu.cpp  nq_worker_compat.cpp  nq_worker_compat.h
src/core/compat/chromium/: nq_client_session.cpp  nq_client_session.h  nq_network_helper.cpp  nq_network_helper.h  nq_packet_reader.cpp  nq_packet_reader.h  nq_packet_writer.cpp  nq_packet_writer.h  nq_proof_source.h  nq_proof_verifier.cpp  nq_proof_verifier.h  nq_quic_client.cpp  nq_quic_client.h  nq_quic_dispatcher.cpp  nq_quic_dispatcher.h  nq_stub_interface.h
src/core/compat/quiche/: deps.h
src/core/platform/: nq_jni.h  nq_jni_android.cpp  nq_platform.h  nq_platform_thread_posix.cpp  nq_platform_thread_win.cpp  nq_reachability.cpp  nq_reachability.h  nq_reachability_android.cpp  nq_reachability_mac.mm
src/interop/: compile_flags.h  naquid_client.cpp  naquid_client.h  naquid_client_loop.cpp  naquid_client_loop.h  naquid_config.cpp  naquid_config.h  naquid_dispatcher.cpp  naquid_dispatcher.h  naquid_loop.h  naquid_network_helper.cpp  naquid_packet_reader.cpp  naquid_packet_reader.h  naquid_proof_source.h  naquid_proof_verifier.h  naquid_server.h  naquid_server_loop.h  naquid_server_session.cpp  naquid_server_session.h  naquid_session.cpp  naquid_session.h  naquid_stream.cpp  naquid_stream.h  naquid_stub_interface.h  naquid_worker.cpp  naquid_worker.h  nq_client.cpp  nq_client.h  nq_client_loop.cpp  nq_client_loop.h  nq_config.cpp  nq_config.h  nq_dispatcher.cpp  nq_dispatcher.h  nq_loop.cpp  nq_loop.h  nq_network_helper.cpp  nq_network_helper.h  nq_packet_reader.cpp  nq_packet_reader.h  (+13 more)
src/interop/compat/: naquid_file_util.cpp  naquid_foundation_util.mm  naquid_quic_socket_utils.cpp  naquid_ref_counted.cpp  naquid_spdy_protocol.cpp  naquid_url_canon_icu.cpp  nq_quic_socket_utils.cpp  nq_string_util.cpp
test/bench/: CMakeLists.txt  main.cpp  main2.cpp  makefile
test/e2e/: common.cpp  common.h  makefile  rpctypes.h
test/e2e/client/: CMakeLists.txt  bench.cpp  echo.cpp  main.cpp  roomcl.cpp
test/e2e/client/specs/: reconnect.cpp  reconnect.h  resolver.cpp  resolver.h  rpc.cpp  rpc.h  shutdown.cpp  shutdown.h  stream.cpp  stream.h  task.cpp  task.h  timeout.cpp  timeout.h
test/e2e/server/: CMakeLists.txt  certs  main.cpp  room.cpp  room.h  roomsv.cpp
tools/builder/: Dockerfile  create.sh
tools/certs/: generate-certs.sh  leaf.cnf
tools/cmake/: android.cmake  bundle.cmake  ios.cmake  linux.cmake  osx.cmake  testlib.cmake  windows.cmake
tools/patch/: 63.0.3222.1_aeddfecf9ffc08250a6cf2c5b0f0497c480b25e7.patch  current.patch
(+5 files in other folders)
